Track distance moved across rounds and reset to 0 on new round

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -168,16 +168,17 @@
     "    def distanceFromRealPoint(self, harmonyObject: HarmonyObject, realPoint: (float, float)):\n",
     "        # TODO: object at realpoint? Elevation at realpoint?\n",
     "        objectLocation = mc.XYLocation(harmonyObject.oid).terminant\n",
-    "        print(f\"Determining distance between {objectLocation} and {realPoint}\")\n",
     "        return distanceFormula(objectLocation, realPoint)\n",
     "\n",
     "    def objectLastDistance(self, harmonyObject: HarmonyObject):\n",
-    "        currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
-    "        return self.distanceFromRealPoint(harmonyObject, currentLocation)\n",
+    "        if mc.GameState.getPhase() == \"Move\":\n",
+    "            currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
+    "            return self.distanceFromRealPoint(harmonyObject, currentLocation) * 0.03937008\n",
+    "        else:\n",
+    "            return mc.DistanceMoved(harmonyObject.oid).terminant\n",
     "\n",
     "    def objectHasMoved(self, harmonyObject: HarmonyObject):\n",
-    "        print(f\"Checking if {harmonyObject} has moved\")\n",
-    "        if self.objectLastDistance(harmonyObject) > 10:\n",
+    "        if self.objectLastDistance(harmonyObject) > 0.3:\n",
     "            return True\n",
     "        return False\n",
     "\n",
@@ -214,7 +215,21 @@
     "    def actionsToResolve(self):\n",
     "        declared_actions = len(app.cm.unitsDeclaredThisRound())\n",
     "        no_actions = len(GameEvent.get_declared_no_action_events())\n",
-    "        return declared_actions - no_actions"
+    "        return declared_actions - no_actions\n",
+    "\n",
+    "    def commitMovement(self):\n",
+    "        self.passiveMode()\n",
+    "        for entity in mc.Movement.entities():\n",
+    "            obj = self.findObject(entity)\n",
+    "            if self.objectHasMoved(obj):\n",
+    "                mc.Move.move_to(entity=entity, newLocation=[*self.cc.rsc.changeSetToRealCenter(obj), 0])\n",
+    "        mc.GameState.newPhase(\"Move\")\n",
+    "\n",
+    "    def resolveRound(self):\n",
+    "        for entity in mc.Movement.entities():\n",
+    "            mc.DistanceMoved.set_relationship(entity, 0)\n",
+    "        mc.GameState.newPhase(\"Action\")\n",
+    "        self.trackMode()"
    ]
   },
   {
