--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -604,7 +604,21 @@
     "\n",
     "    @classmethod\n",
     "    def validate(cls, terminant):\n",
-    "        return str(int(terminant))"
+    "        return str(int(terminant))\n",
+    "\n",
+    "\n",
+    "class FloatSystem(System):\n",
+    "    \"\"\" Simple Float Numerical System \"\"\"\n",
+    "    @classmethod\n",
+    "    def get_relationship(cls, entity):\n",
+    "        rel = super().get_relationship(entity)\n",
+    "        if rel is not None:\n",
+    "            return float(rel)\n",
+    "        return None\n",
+    "\n",
+    "    @classmethod\n",
+    "    def validate(cls, terminant):\n",
+    "        return str(float(terminant))"
    ]
   },
   {
