Fix declared action display

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -192,9 +192,8 @@
     "        return moved\n",
     "\n",
     "    def objectHasDeclared(self, harmonyObject):\n",
-    "        for de in GameEvent.get_declared_events():\n",
-    "            if harmonyObject.oid == de.GameEventObject.terminant:\n",
-    "                return True\n",
+    "        if len(GameEvent.get_existing_declarations(harmonyObject.oid)) > 0:\n",
+    "            return True\n",
     "        return False\n",
     "\n",
     "    def unitsDeclaredThisRound(self):\n",
