--- a/harmony/dma/MechaCombat/GameEventSystem.ipynb
+++ b/harmony/dma/MechaCombat/GameEventSystem.ipynb
@@ -81,14 +81,13 @@
     "\n",
     "    @classmethod\n",
     "    def move_event(cls, gameEvent, oldAnchor, newAnchor):\n",
-    "        print(f\"Dropping {gameEvent} -- {oldAnchor}\")\n",
     "        qs.drop(gameEvent, cls.__name__, oldAnchor)\n",
-    "        print(f\"Putting {gameEvent} -- {newAnchor}\")\n",
     "        qs.put(gameEvent, cls.__name__, newAnchor)\n",
     "\n",
     "    @classmethod\n",
     "    def get_existing_declarations(cls, gameEventObject):\n",
-    "        return [cls(event[0]) for event in qs.get(edge_name=GameEventObject, terminant=gameEventObject)]\n",
+    "        declared_events = cls.get_declared_events()\n",
+    "        return [event for event in declared_events if event.GameEventObject.terminant == gameEventObject]\n",
     "\n",
     "    @classmethod\n",
     "    def drop_existing_declarations(cls, gameEventObject):\n",
