Disable Destroyed Units

--- a/harmony/dma/MechaCombat/StructureSystem.ipynb
+++ b/harmony/dma/MechaCombat/StructureSystem.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "StructureFactories = {\n",
-    "    \"Landscape\": Structure.buildStructureFactory(\n",
+    "    \"Factory\": Structure.buildStructureFactory(\n",
     "        StructureType=\"Landscape\",\n",
     "        XYLocation=[0, 0],\n",
     "        Elevation=5,\n",
