--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "from importnb import Notebook\n",
     "with Notebook():\n",
-    "    from Observer import Observer, CaptureConfiguration, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject"
+    "    from Observer import Observer, CaptureConfiguration, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition"
    ]
   },
   {
