--- a/harmony/dma/MechaCombat/MechSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechSystem.ipynb
@@ -101,7 +101,11 @@
     "            systemDefaults[\"Unit\"][\"Skill\"] = skill\n",
     "            systemDefaults[\"Unit\"][\"Move\"][\"XYLocation\"] = xylocation or [0, 0]\n",
     "            return cls(mechName, **systemDefaults)\n",
-    "        return newMechFactory"
+    "        return newMechFactory\n",
+    "\n",
+    "    @classmethod\n",
+    "    def active_mechs(cls):\n",
+    "        return [m for m in cls.entities() if not UnitDamage.is_destroyed(entity=m)]"
    ]
   },
   {
@@ -135,6 +139,37 @@
     "            },\n",
     "            \"UnitDamage\": {\n",
     "                \"Armor\": {\"ArmorPlating\": \"9\", \"ArmorPlatingDamage\": 0, \"ArmorStructural\": \"7\", \"ArmorStructuralDamage\": 0},\n",
+    "                \"CriticalHits\": {\"EngineCriticalHits\": \"1\", \"FireControlCriticalHits\": \"1\", \"MPCriticalHits\": \"4\", \"WeaponsCriticalHits\": \"4\"}\n",
+    "            },\n",
+    "            \"Size\": \"4\",\n",
+    "            \"TMM\": \"1\",\n",
+    "            \"Special\": json.dumps([\"OMNI\", \"CASE\", \"IF01\"]),\n",
+    "            \"PointValue\": \"54\"\n",
+    "        }\n",
+    "    }),\n",
+    "    \"(Destroyed) Kingfisher Prime\": Mech.buildMechFactory({\n",
+    "        \"Chassis\": \"Kingfisher Prime\",\n",
+    "        \"Unit\": {\n",
+    "            \"Move\": {  # Move System\n",
+    "                \"Movement\": {\"MovementSpeed\": 8, \"JumpJets\": \"j\", \"DistanceMoved\": 0},\n",
+    "                \"Elevation\": \"0\",\n",
+    "                \"XYLocation\": [0, 0]\n",
+    "            },\n",
+    "            \"Faction\": \"Unaligned\",\n",
+    "            \"Skill\": 4\n",
+    "        },\n",
+    "        \"MechDefinition\": {\n",
+    "            \"MechType\": \"BM\",\n",
+    "            \"MechModel\": \"Kingfisher Prime\",\n",
+    "            \"MechRole\": \"Brawler\",\n",
+    "            \"Weapons\": {\n",
+    "                \"ShortRangeWeapons\": {\"Targeting\": {\"Modifier\": \"0\", \"Damage\": \"6\"}},\n",
+    "                \"MidRangeWeapons\": {\"Targeting\": {\"Modifier\": \"2\", \"Damage\": \"6\"}},\n",
+    "                \"LongRangeWeapons\": {\"Targeting\": {\"Modifier\": \"4\", \"Damage\": \"3\"}},\n",
+    "                \"Overheat\": {\"OverheatValue\": \"1\", \"OverheatDamage\": \"3\"}\n",
+    "            },\n",
+    "            \"UnitDamage\": {\n",
+    "                \"Armor\": {\"ArmorPlating\": \"9\", \"ArmorPlatingDamage\": 9, \"ArmorStructural\": \"7\", \"ArmorStructuralDamage\": 7},\n",
     "                \"CriticalHits\": {\"EngineCriticalHits\": \"1\", \"FireControlCriticalHits\": \"1\", \"MPCriticalHits\": \"4\", \"WeaponsCriticalHits\": \"4\"}\n",
     "            },\n",
     "            \"Size\": \"4\",\n",
