Add faction display/filtering system

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -257,7 +257,10 @@
     "        return mc.UnitDamage.is_destroyed(entity=oid)\n",
     "\n",
     "    def mech_skill(self, mech_oid: str):\n",
-    "        return mc.Skill(mech_oid).terminant"
+    "        return mc.Skill(mech_oid).terminant\n",
+    "\n",
+    "    def factions(self):\n",
+    "        return mc.Faction.entities()"
    ]
   },
   {
