--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -41,7 +41,7 @@
     "            factory = self.objectFactories[self.objectType][self.objectSubType]\n",
     "        except KeyError as ke:\n",
     "            raise Exception(f\"Unrecognized object type and subtype - {self.objectType}-{self.objectSubType}\")\n",
-    "        self.object = factory(self.oid, faction=\"Unaligned\", **self.objectKwargs)\n",
+    "        self.object = factory(self.oid, **self.objectKwargs)\n",
     "        GameState.addObject(self.object.entity, self.objectType)\n",
     "\n",
     "    @classmethod\n",
@@ -260,7 +260,7 @@
     "        return mc.Skill(mech_oid).terminant\n",
     "\n",
     "    def factions(self):\n",
-    "        return mc.Faction.entities()"
+    "        return mc.Faction.terminants()"
    ]
   },
   {
