Full faction input and display

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -260,7 +260,13 @@
     "        return mc.Skill(mech_oid).terminant\n",
     "\n",
     "    def factions(self):\n",
-    "        return mc.Faction.terminants()"
+    "        return mc.Faction.terminants()\n",
+    "\n",
+    "    def faction(self, oid: str):\n",
+    "        return mc.Faction(oid).terminant\n",
+    "\n",
+    "    def object_type(self, oid: str):\n",
+    "        return mc.GameObject(oid).terminant"
    ]
   },
   {
