Implement Line of Sight in ui

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -130,7 +130,7 @@
     "    def declareEvent(self, eventType: str, eventFaction: str, eventObject: str, eventValue: str, eventResult: str):\n",
     "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventResult)\n",
     "    \n",
-    "    def classifyObject(self, objectId, objectType, objectSubType, objectKwargs):\n",
+    "    def classifyObject(self, objectId: str, objectType: str, objectSubType:str , objectKwargs: dict):\n",
     "        trackedObject = self.findObject(objectId)\n",
     "        memoryIndex = self.memory.index(trackedObject)\n",
     "        harmonyObject = HarmonyObject.from_tracked_object(\n",
@@ -141,7 +141,7 @@
     "\n",
     "    def captureRealCoord(self, capture):\n",
     "        \"\"\" movement distance this round \"\"\"\n",
-    "        return self.changeSetToRealCenter(capture)\n",
+    "        return self.cc.rsc.changeSetToRealCenter(capture)\n",
     "\n",
     "    def captureSystemCoord(self, capture):\n",
     "        return mc.XYLocation(capture.oid)\n",
@@ -266,7 +266,14 @@
     "        return mc.Faction(oid).terminant\n",
     "\n",
     "    def object_type(self, oid: str):\n",
-    "        return mc.GameObject(oid).terminant"
+    "        return mc.GameObject(oid).terminant\n",
+    "\n",
+    "    def line_of_sight(self, actor: HarmonyObject, target: HarmonyObject):\n",
+    "        print(f\"Checking LoS for {actor.oid} to {target.oid}\")\n",
+    "        return self.cc.line_of_sight(actor, target, self.memory)\n",
+    "\n",
+    "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
+    "        return self.cc.buildMiniMap(yellowObjects=yellowObjects, blueObjects=blueObjects, greenObjects=greenObjects)"
    ]
   },
   {
