--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -541,7 +541,7 @@
     "        \n",
     "        # Get the bounding box points for both objects\n",
     "        for obj in [objectA, objectB]:\n",
-    "            points.extend([p[0] for p in cc.objectToHull(obj)])\n",
+    "            points.extend([p[0] for p in self.objectToHull(obj)])\n",
     "    \n",
     "        # Compute the convex hull\n",
     "        objects_hull = cv2.convexHull(np.array(points))\n",
@@ -696,20 +696,21 @@
     }
    ],
    "source": [
-    "plt.imshow(cc.buildMiniMap(\n",
-    "    blueObjects=cm.memory,\n",
-    "    greenObjects=[cm.lastClassification] if cm.lastClassification is not None else None))\n",
-    "\n",
-    "for obj in cm.memory:\n",
-    "    other_objs = [o for o in cm.memory if o != obj]\n",
-    "    print(obj.oid)\n",
-    "    print(f\"{' ':40} -- Obj: {other_objs[0].oid:40} -- Obj: {other_objs[1].oid:20}\")\n",
-    "    print(f\"{' ':40} -- Dis: {cc.rsc.distanceBetweenObjects(obj, other_objs[0]):40} -- Dis: {cc.rsc.distanceBetweenObjects(obj, other_objs[1]):20}\")\n",
-    "    print(f\"{' ':40} -- LoS: {str(cc.line_of_sight(obj, other_objs[0], cm.memory)):40} -- LoS: {str(cc.line_of_sight(obj, other_objs[1], cm.memory)):20}\")\n",
+    "if __name__ == \"__main__\":\n",
     "    plt.imshow(cc.buildMiniMap(\n",
-    "        blueObjects=other_objs,\n",
-    "        greenObjects=[obj]))\n",
-    "    plt.show()"
+    "        blueObjects=cm.memory,\n",
+    "        greenObjects=[cm.lastClassification] if cm.lastClassification is not None else None))\n",
+    "    \n",
+    "    for obj in cm.memory:\n",
+    "        other_objs = [o for o in cm.memory if o != obj]\n",
+    "        print(obj.oid)\n",
+    "        print(f\"{' ':40} -- Obj: {other_objs[0].oid:40} -- Obj: {other_objs[1].oid:20}\")\n",
+    "        print(f\"{' ':40} -- Dis: {cc.rsc.distanceBetweenObjects(obj, other_objs[0]):40} -- Dis: {cc.rsc.distanceBetweenObjects(obj, other_objs[1]):20}\")\n",
+    "        print(f\"{' ':40} -- LoS: {str(cc.line_of_sight(obj, other_objs[0], cm.memory)):40} -- LoS: {str(cc.line_of_sight(obj, other_objs[1], cm.memory)):20}\")\n",
+    "        plt.imshow(cc.buildMiniMap(\n",
+    "            blueObjects=other_objs,\n",
+    "            greenObjects=[obj]))\n",
+    "        plt.show()"
    ]
   },
   {
