Beginnings of elevetion; simple game save/load

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, asdict\n",
     "from observer import CalibratedObserver, TrackedObject, CalibratedCaptureConfiguration, Transition, distanceFormula\n",
     "import dma.MechaCombat as mc\n",
     "from dma.MechaCombat import GameEvent, GameState, Skill, Mech\n",
@@ -31,7 +31,7 @@
     "    objectSubType: str = None\n",
     "    objectKwargs: dict = None\n",
     "\n",
-    "    objectFactories = {\"Unit\": mc.MechFactories, \"Structure\": mc.StructureFactories}\n",
+    "    objectFactories = {\"Unit\": mc.MechFactories, \"Structure\": mc.StructureFactories, \"Terrain\": mc.TerrainFactories}\n",
     "    \n",
     "    def __post_init__(self):\n",
     "        super().__post_init__()\n",
@@ -273,7 +273,36 @@
     "        return self.cc.line_of_sight(actor, target, self.memory)\n",
     "\n",
     "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
-    "        return self.cc.buildMiniMap(yellowObjects=yellowObjects, blueObjects=blueObjects, greenObjects=greenObjects)"
+    "        return self.cc.buildMiniMap(yellowObjects=yellowObjects, blueObjects=blueObjects, greenObjects=greenObjects)\n",
+    "\n",
+    "    def changeOverlaps(self, camera, change):\n",
+    "        changes = [m.changeSet[camera.camName] for m in self.memory if self.object_type(m.oid) in [None, \"Unit\"]]\n",
+    "        overlaps = []\n",
+    "        for eC in changes:\n",
+    "            if eC.changeType is not None and eC.changeOverlap(change) and eC not in overlaps:\n",
+    "                overlaps.append(eC)\n",
+    "        return overlaps\n",
+    "\n",
+    "    def objectElevation(self, obj):\n",
+    "        terrainAndBuildings = [m for m in self.memory if self.object_type(m.oid) in [\"Terrain\", \"Structure\"]]\n",
+    "        # Determine overlaps\n",
+    "        overlap = None\n",
+    "        return 0 if overlap is None else mc.Elevation(overlap.oid).terminant\n",
+    "\n",
+    "    def saveGame(self, gameName=\"harmony\"):\n",
+    "        gameState = {\n",
+    "            \"objectMemory\": asdict(self.memory),\n",
+    "            \"gameGraph\": mc.whole_graph()}\n",
+    "        with open(f\"{gameName}.harmony\", \"w\") as f:\n",
+    "            f.write(json.dumps(gameState))\n",
+    "\n",
+    "    def loadGame(self, gameName=\"harmony\"):\n",
+    "        self.reset()\n",
+    "        with open(f\"{gameName}.harmony\", \"r\") as f:\n",
+    "            gameData = json.loads(f.read())\n",
+    "        self.memory = [HarmonyObject(**m) for m in gameData['objectMemory']]\n",
+    "        for rel in gameData['gameGraph']:\n",
+    "            mc.put(*rel)"
    ]
   },
   {
