--- a/harmony/dma/MechaCombat/StructureSystem.ipynb
+++ b/harmony/dma/MechaCombat/StructureSystem.ipynb
@@ -79,6 +79,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "329b88b1-a556-4b25-887c-4e902f68e5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@Elevation.sd\n",
+    "@XYLocation.sd\n",
+    "class Terrain(HyperSystem):\n",
+    "    @classmethod\n",
+    "    def buildTerrainFactory(cls, **systemDefaults):\n",
+    "        return partial(\n",
+    "            cls,\n",
+    "            **systemDefaults)\n",
+    "\n",
+    "\n",
+    "TerrainFactories = {\n",
+    "    \"UniformElevation\": Terrain.buildTerrainFactory(\n",
+    "        Elevation=10,\n",
+    "        XYLocation=[0, 0]\n",
+    "    )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "838ae5a6-4c9e-4ac3-a162-f8de7fb010a6",
    "metadata": {},
