--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76d8e854-1197-4b8b-b045-2304a81e2cd1",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4074583d-e855-4d4c-ae8a-d374505c36c5",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7e358783-1fde-4c6a-bb36-4f7e49e239c8",
    "metadata": {},
    "outputs": [
@@ -240,27 +240,27 @@
        "<!-- noof -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>noof</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"30.55\" cy=\"-39.28\" rx=\"30.59\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b00\" cx=\"30.55\" cy=\"-39.28\" rx=\"30.59\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"30.55\" y=\"-35.58\" font-family=\"Times,serif\" font-size=\"14.00\">noof</text>\n",
        "</g>\n",
        "<!-- rube -->\n",
        "<g id=\"node2\" class=\"node\">\n",
        "<title>rube</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"172.97\" cy=\"-18\" rx=\"32.49\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"green\" cx=\"172.97\" cy=\"-18\" rx=\"32.49\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"172.97\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">rube</text>\n",
        "</g>\n",
        "<!-- noof&#45;&gt;rube -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>noof&#45;&gt;rube</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M60.4,-34.82C80.92,-31.75 108.43,-27.64 131.13,-24.25\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"131.8,-27.69 141.17,-22.75 130.77,-20.77 131.8,-27.69\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M60.4,-34.82C80.92,-31.75 108.43,-27.64 131.13,-24.25\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"131.8,-27.69 141.17,-22.75 130.77,-20.77 131.8,-27.69\"/>\n",
        "<text text-anchor=\"middle\" x=\"83.77\" y=\"-33.33\" font-family=\"Times,serif\" font-size=\"14.00\">fub</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffec3790650>"
+       "<graphviz.graphs.Digraph at 0x7fff783edf90>"
       ]
      },
      "metadata": {},
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1fa0fe76-211b-45dd-8498-c32d9395d674",
    "metadata": {},
    "outputs": [],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9811eb99-a56b-482c-8f51-280c8cadb877",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cda2e13b-d9a7-4ea2-b565-c7ac005050c4",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "278b156f-ba0d-47f2-8ca1-9eb1e8f2978d",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "<!-- foo -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>foo</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"187.57\" cy=\"-552.96\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#458b74\" cx=\"187.57\" cy=\"-552.96\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"187.57\" y=\"-549.26\" font-family=\"Times,serif\" font-size=\"14.00\">foo</text>\n",
        "</g>\n",
        "<!-- [1, 2, 3] -->\n",
@@ -677,14 +677,14 @@
        "<!-- foo&#45;&gt;[1, 2, 3] -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>foo&#45;&gt;[1, 2, 3]</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M197.49,-569.72C212.03,-594.29 239.29,-640.37 256.65,-669.72\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"253.81,-671.78 261.91,-678.61 259.83,-668.22 253.81,-671.78\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M197.49,-569.72C212.03,-594.29 239.29,-640.37 256.65,-669.72\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"253.81,-671.78 261.91,-678.61 259.83,-668.22 253.81,-671.78\"/>\n",
        "<text text-anchor=\"middle\" x=\"154.07\" y=\"-623.52\" font-family=\"Times,serif\" font-size=\"14.00\">IntegerArraySystem</text>\n",
        "</g>\n",
        "<!-- bud -->\n",
        "<g id=\"node3\" class=\"node\">\n",
        "<title>bud</title>\n",
-       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"28.6\" cy=\"-503.25\" rx=\"28.7\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"red\" cx=\"28.6\" cy=\"-503.25\" rx=\"28.7\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"28.6\" y=\"-499.55\" font-family=\"Times,serif\" font-size=\"14.00\">bud</text>\n",
        "</g>\n",
        "<!-- foo&#45;&gt;bud -->\n",
@@ -703,8 +703,8 @@
        "<!-- foo&#45;&gt;3 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
        "<title>foo&#45;&gt;3</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M174.87,-569.02C158.21,-590.09 128.83,-627.23 109.48,-651.69\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"106.56,-649.76 103.1,-659.77 112.05,-654.1 106.56,-649.76\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M174.87,-569.02C158.21,-590.09 128.83,-627.23 109.48,-651.69\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"106.56,-649.76 103.1,-659.77 112.05,-654.1 106.56,-649.76\"/>\n",
        "<text text-anchor=\"middle\" x=\"89.18\" y=\"-599.16\" font-family=\"Times,serif\" font-size=\"14.00\">IntegerSystem</text>\n",
        "</g>\n",
        "<!-- foo&#45;TestMetaSystem -->\n",
@@ -716,8 +716,8 @@
        "<!-- foo&#45;TestMetaSystem&#45;&gt;foo -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>foo&#45;TestMetaSystem&#45;&gt;foo</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M276.82,-443.42C258.53,-465.87 227.19,-504.33 206.94,-529.19\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"204.13,-527.09 200.53,-537.06 209.56,-531.51 204.13,-527.09\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M276.82,-443.42C258.53,-465.87 227.19,-504.33 206.94,-529.19\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"204.13,-527.09 200.53,-537.06 209.56,-531.51 204.13,-527.09\"/>\n",
        "<text text-anchor=\"middle\" x=\"181.38\" y=\"-490.1\" font-family=\"Times,serif\" font-size=\"14.00\">TestMetaSystem</text>\n",
        "</g>\n",
        "<!-- noof -->\n",
@@ -742,14 +742,14 @@
        "<!-- foo&#45;TestMetaSystem&#45;&gt;5 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>foo&#45;TestMetaSystem&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M395.53,-421.86C403.3,-421.59 410.78,-421.33 417.66,-421.1\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"418.06,-424.59 427.93,-420.75 417.82,-417.59 418.06,-424.59\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M395.53,-421.86C403.3,-421.59 410.78,-421.33 417.66,-421.1\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"418.06,-424.59 427.93,-420.75 417.82,-417.59 418.06,-424.59\"/>\n",
        "<text text-anchor=\"middle\" x=\"459.59\" y=\"-425.28\" font-family=\"Times,serif\" font-size=\"14.00\">IntegerSystem</text>\n",
        "</g>\n",
        "<!-- ruu -->\n",
        "<g id=\"node8\" class=\"node\">\n",
        "<title>ruu</title>\n",
-       "<ellipse fill=\"none\" stroke=\"green\" cx=\"524.39\" cy=\"-277.31\" rx=\"27\" ry=\"18\"/>\n",
+       "<ellipse fill=\"none\" stroke=\"#800000\" cx=\"524.39\" cy=\"-277.31\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"524.39\" y=\"-273.61\" font-family=\"Times,serif\" font-size=\"14.00\">ruu</text>\n",
        "</g>\n",
        "<!-- ruu&#45;&gt;5 -->\n",
@@ -775,8 +775,8 @@
        "<!-- ruu&#45;TestMetaSystem&#45;&gt;ruu -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
        "<title>ruu&#45;TestMetaSystem&#45;&gt;ruu</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M427.38,-186.49C447.59,-205.41 479.42,-235.21 501.07,-255.48\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"498.85,-258.19 508.54,-262.47 503.63,-253.08 498.85,-258.19\"/>\n",
+       "<path fill=\"none\" stroke=\"#4876ff\" d=\"M427.38,-186.49C447.59,-205.41 479.42,-235.21 501.07,-255.48\"/>\n",
+       "<polygon fill=\"#4876ff\" stroke=\"#4876ff\" points=\"498.85,-258.19 508.54,-262.47 503.63,-253.08 498.85,-258.19\"/>\n",
        "<text text-anchor=\"middle\" x=\"524.72\" y=\"-224.79\" font-family=\"Times,serif\" font-size=\"14.00\">TestMetaSystem</text>\n",
        "</g>\n",
        "<!-- 6 -->\n",
@@ -788,15 +788,15 @@
        "<!-- ruu&#45;TestMetaSystem&#45;&gt;6 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
        "<title>ruu&#45;TestMetaSystem&#45;&gt;6</title>\n",
-       "<path fill=\"none\" stroke=\"slateblue\" d=\"M410.99,-150.37C414.97,-124.49 422.32,-76.76 427.02,-46.24\"/>\n",
-       "<polygon fill=\"slateblue\" stroke=\"slateblue\" points=\"430.5,-46.64 428.57,-36.22 423.59,-45.57 430.5,-46.64\"/>\n",
+       "<path fill=\"none\" stroke=\"coral\" d=\"M410.99,-150.37C414.97,-124.49 422.32,-76.76 427.02,-46.24\"/>\n",
+       "<polygon fill=\"coral\" stroke=\"coral\" points=\"430.5,-46.64 428.57,-36.22 423.59,-45.57 430.5,-46.64\"/>\n",
        "<text text-anchor=\"middle\" x=\"366.01\" y=\"-102.1\" font-family=\"Times,serif\" font-size=\"14.00\">IntegerSystem</text>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7ffec25e81d0>"
+       "<graphviz.graphs.Digraph at 0x7fff783e2350>"
       ]
      },
      "metadata": {},
@@ -875,8 +875,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "76a43f22-0a6d-4ab2-85a6-bb7dcf8addd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['foo', 'IntegerArraySystem', '[1, 2, 3]'],\n",
+       " ['foo', 'System', 'bud'],\n",
+       " ['foo', 'IntegerSystem', '3'],\n",
+       " ['foo-TestMetaSystem', 'System', 'noof'],\n",
+       " ['foo-TestMetaSystem', 'IntegerSystem', '5'],\n",
+       " ['foo-TestMetaSystem', 'TestMetaSystem', 'foo'],\n",
+       " ['ruu', 'System', '5'],\n",
+       " ['ruu-TestMetaSystem', 'System', 'noof'],\n",
+       " ['ruu-TestMetaSystem', 'IntegerSystem', '6'],\n",
+       " ['ruu-TestMetaSystem', 'TestMetaSystem', 'ruu']]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(json.dumps(qs.whole_graph()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5de003d-40f6-4cb8-92d4-e21999bfdc17",
    "metadata": {},
    "outputs": [],
    "source": []
