Implement HarmonyMachine save/load feature

--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -128,7 +128,7 @@
     "@dataclass\n",
     "class CameraChange:\n",
     "    camName: str\n",
-    "    changeContours: np.array\n",
+    "    changeContours: list[np.array]\n",
     "    before: np.array\n",
     "    after: np.array\n",
     "    changeType: str = \"unclassified\"\n",
