--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "602edeb2-f084-41b8-a6cf-a2973e33c8f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from importnb import Notebook\n",
     "with Notebook():\n",
-    "    from Observer import Observer, CaptureConfiguration, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition"
+    "    from Observer import Observer, CaptureConfiguration, CameraChange, Camera, hStackImages, vStackImages, ChangeSet, TrackedObject, Transition"
    ]
   },
   {
