Improve reload feature

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -320,9 +320,7 @@
     "        for m in gameData['objectMemory']:\n",
     "            m['changeSet'] = {cam: self.numpyizeDeserializedCameraChange(camChange) for cam, camChange in m['changeSet'].items()}\n",
     "        self.memory = [HarmonyObject(**m) for m in gameData['objectMemory']]\n",
-    "    \n",
-    "        for rel in gameData['gameGraph']:\n",
-    "            mc.qs.put(*rel)"
+    "        mc.qs.graph.mass_put(gameData['gameGraph'])"
    ]
   },
   {
