--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -56,16 +56,15 @@
     "\n",
     "    @contextmanager\n",
     "    def cursor(self):\n",
-    "        self.__connect__()\n",
+    "        self.connect()\n",
     "        cur = self.conn.cursor()\n",
-    "        cur.execute(\"PRAGMA journal_mode=WAL\")\n",
-    "        cur.execute(\"PRAGMA synchronous=NORMAL\")\n",
     "        yield cur\n",
     "        cur.close()\n",
+    "        self.conn.commit()\n",
     "        self.conn.close()\n",
     "        self.conn = None\n",
     "    \n",
-    "    def __connect__(self):\n",
+    "    def connect(self):\n",
     "        # self.conn = sqlite3.connect(\"file:dma?mode=memory&cache=shared\", uri=True, check_same_thread=False)\n",
     "        if self.conn is None:\n",
     "            self.conn = sqlite3.connect(\n",
@@ -75,14 +74,24 @@
     "                timeout=5)\n",
     "\n",
     "    def reset(self):\n",
-    "        with self.cursor() as cur:\n",
-    "            cur.execute(\"DROP TABLE IF EXISTS edges;\")\n",
-    "            cur.execute(\"\"\"CREATE TABLE edges (\n",
-    "                start_node TEXT NOT NULL,\n",
-    "                edge_name TEXT NOT NULL,\n",
-    "                end_node TEXT NOT NULL,\n",
-    "                UNIQUE(start_node, edge_name) ON CONFLICT REPLACE);\"\"\")\n",
-    "            self.conn.commit()\n",
+    "        with DB_LOCK:\n",
+    "            for p in [\"harmony.db\", \"harmony.db-shm\", \"harmony.db-wal\"]:\n",
+    "                try:\n",
+    "                    os.remove(p)\n",
+    "                except FileNotFoundError:\n",
+    "                    pass\n",
+    "    \n",
+    "            with self.cursor() as cur:\n",
+    "                cur.execute(\"DROP TABLE IF EXISTS edges;\")\n",
+    "                cur.execute(\"\"\"CREATE TABLE edges (\n",
+    "                    start_node TEXT NOT NULL,\n",
+    "                    edge_name TEXT NOT NULL,\n",
+    "                    end_node TEXT NOT NULL,\n",
+    "                    UNIQUE(start_node, edge_name) ON CONFLICT REPLACE);\"\"\")\n",
+    "                self.conn.commit()\n",
+    "                cur.execute(\"PRAGMA synchronous=NORMAL\")\n",
+    "                cur.execute(\"PRAGMA journal_mode=WAL\")\n",
+    "                self.conn.commit()\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.conn = None\n",
@@ -91,6 +100,18 @@
     "        with DB_LOCK, self.cursor() as cur:\n",
     "            cur.execute(f\"INSERT INTO edges VALUES ('{start_node}', '{edge_name}', '{end_node}')\")\n",
     "            self.conn.commit()\n",
+    "\n",
+    "    def mass_put(self, edges: list[str, str, str], batch_size=10):\n",
+    "        print(f\"Mass Write to Graph: {len(edges)}\")\n",
+    "        with DB_LOCK, self.cursor() as cur:\n",
+    "            for batch_idx in range(0, len(edges), batch_size):\n",
+    "                print(f\"On: {batch_idx}\")\n",
+    "                batch = edges[batch_idx:batch_idx + batch_size]\n",
+    "                values = \",\\n\".join([\n",
+    "                    f\"('{row[0]}', '{row[1]}', '{row[2]}')\" for row in batch])\n",
+    "                query = f\"INSERT INTO edges VALUES {values};\"\n",
+    "                cur.execute(query)\n",
+    "                self.conn.commit()\n",
     "\n",
     "    def drop(self, start_node, edge_name, end_node):\n",
     "        with DB_LOCK, self.cursor() as cur:\n",
